Revision history for perl distribution Toadfarm

0.68 Not Released
 - Add "tail" command
 - Add "--tail" to reload command

0.67 2015-09-21T21:09:13+0200
 - Avoid warning when loading application class

0.66 2015-07-14T17:39:06+0200
 - Cannot run tests as "root"

0.65 2015-07-11T13:38:53+0200
 - Fix failing tests without "hypnotoad" in $PATH

0.64 2015-06-12T12:03:45+0200
 - Fix single app need to have Toadfarm::Command as well

0.63 2015-05-25T18:00:26+0200
 - Fix MANIFEST.SKIP to skip .test-all

0.62 2015-05-25T13:26:12+0200
 - Fix init script recipe in Toadfarm::Manual::RunningToadfarm
 - Improved Reload plugin documentation, regarding WebHook URL #15
 - Will not run t/reload.t without TEST_RELOAD=1 #13

0.61 2015-05-04T17:12:07+0200
 - Fix "Permission denied" when running "sudo" without -i

0.60 2015-05-02T09:32:44+0200
 - Fix t/rules.t
 - Fix 'Use of "rand" without parentheses is ambiguous'

0.59 2015-05-02T01:50:42+0200
 - Fix sudo to run with -H
 - Fix matching X-Request-Base with a regex
 - Fix "/" in matching HTTP header regex

0.58 2015-05-01T13:28:24+0200
 - Fix creating config with references

0.57 2015-04-30T23:24:53+0200
 - Fix './toadfarm.pl daemon' by setting a default TOADFARM_ACTION value

0.56 2015-04-28T17:36:26+0200
 - Will not run t/run-as.t unless TOADFARM_SUDO_TEST=1

0.55 2015-04-27T07:52:44+0200
 - Add support for Mojolicious::Plugin::SetUserGroup

0.54 2015-04-26T23:32:44+0200
 - Add run_as()
 - Unable to change user/group without setting TOADFARM_INSECURE=1
 - Unable to start as root without setting TOADFARM_INSECURE=1

0.53 2015-04-26T14:07:33+0200
 - Can generate local config file pr. app
 - Try to improve cpan testers result
 - Add note about previous Toadfarm version
 - Add note about plenv/perlbrew to RunningToadfarm
 - Move "Listen to standard HTTP ports" documentation to RunningToadfarm

0.52 2015-04-26T10:10:31+0200
 - Fix documentation #6 #8
 - Fix Toadfarm::Plugin::Reload #5
   https://developer.github.com/webhooks/#payloads